Spring 2025 FAQ Update 2

--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -334,7 +334,7 @@
                     In an ideal world, I would report multiple grades to the Registrar; one for each of the Learning Outcomes. However, I can only report a single letter grade. Thus, at the end of the semester, I am tasked with determining the most appropriate letter grade based upon the semester's worth of data on the Learning Outcomes and Learning Objectives for each of you.
                 </p>
                 <p>
-                    To determine grades, I work in a data informed and principled/structured way. This allows me to account for the unique elements of each semester (i.e., the broader context) and the students in the course. I do this in a data informed way. thus each semester is a little bit different.
+                    To determine grades, I work in a data informed and principled/structured way. This allows me to account for the unique elements of each semester (i.e., the broader context) and the students in the course. Thus, each semester is a little bit different.
                 </p>
                 <p>
                     I begin by pulling the entire body of evidence from the Standards-Based grading system. Using data wrangling techniques like what we learn in class, I'll generate counts for each student that answer the following questions.
