--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -119,15 +119,16 @@
                 </p>
                 <h3>Learning Objectives</h3>
                 <ul>
-                    <li>Students will develop their ability to create reproducible code that others can understand.</li>
-                    <li>Students will develop their skills in programming with statistical software.</li>
-                    <li>Students will develop their skills in using statistical software to engage in data analysis.</li>
-                    <li>Students will develop their skills in collaborative programming.</li>
-                    <li>Students will develop ways of thinking which make use of computing power.</li>
+                    <li><strong>Computational Thinking:</strong> Students will develop ways of thinking that make use of R’s computing power to solve problems.</li>
+                    <li><strong>Programming:</strong> Students will develop their skills in programming (creating code) with statistical software.</li>
+                    <li><strong>Data Analysis:</strong> Students will develop their skills in using statistical software to engage in data analysis.</li>
+                    <li><strong>Reproducibility:</strong> Students will develop their skills in creating reproducible code and data analyses.</li>
+                    <li><strong>Communication:</strong> Students will develop their communication skills as related to statistical programing and data analysis.</li>
+                    <li><strong>Professionalism:</strong> Students will develop their professional identity through self-reflection and working with others.</li>
                 </ul>
                 <h3>Learning Outcomes</h3>
                 <p>
-                    You can view the current learning outcomes (and objectives) by checking out the Progress Checker app I've created (linked in Canvas) or by viewing them through this shared document <a class="bodylinks" target="_blank" href="https://www.dropbox.com/s/p980ou4j904h75k/Stat184LearningOutcomes.pdf?dl=0">Stat 184 Learning Outcomes PDF</a>.
+                    You can view the current learning outcomes (and objectives) by checking out the Progress Checker app I've created (linked in Canvas) or by viewing them through this shared document <a class="bodylinks" target="_blank" href="https://www.dropbox.com/scl/fi/rc4vqxj62kzi5hbvgndrb/Stat184_LearningOutcomes_Spring2025.pdf?rlkey=g8ab7cwtdu94dwfknqxlihlf3&dl=0">Stat 184 Learning Outcomes PDF</a>.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="responsibilities">What are our responsibilities? (Student and Instructor Responsibilities)
