--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -79,7 +79,7 @@
                     <dt>Required Reading Materials</dt>
                     <dd>
                         Readings for the course will be made freely available to enrolled students via Canvas and Perusall. The required readings will come from multiple sources including <a class="bodylinks" target="_blank"
-                        href="https://dtkaplan.github.io/DataComputingEbook/">Computing (2nd Edition) by Daniel Kaplan &
+                        href="https://dtkaplan.github.io/DataComputingEbook/">Data Computing (2nd Edition) by Daniel Kaplan &
                         Matthew Beckman</a> as well as various readings by Tufte and Kosslyn.
                     </dd>
                     <dt>Required Hardware</dt>
