Post Vote Updates

--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -39,7 +39,7 @@
                 <p>
                     This page serves as a collection of the most common and most important Course Questions to help you succeed. Be sure to look through the various sections. I will keep this page as up-to-date as possible to address any questions that you and your classmates bring up as well as any changes that we need to make.
                 </p>
-                <p>Date of Last Update: 1/13/2025</p>
+                <p>Date of Last Update: 1/23/2025</p>
                 <h3 id="catTop">Categories</h3>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
                     <li><a href="#keyInfo" class="bodylinks">Key Course Information</a></li>
@@ -540,20 +540,13 @@
                         <label for="faq79" class="lbl-toggle" tabindex="0" id="studentResponsibilities">What are my responsibilities as a student in the class?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
-                                <p><mark>TBD: The class community will craft these.</mark></p>
                                 <p>
-                                    The Fall 2024 classes came up with the following Student Responsibilities.
+                                    The Spring 2025 class came up with the following additional Student Responsibilities.
                                 </p>
-                                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
-                                    <li>On-time attendance</li>
-                                    <li>Don't distract others</li>
-                                    <li>(Adequately) Contribute to group projects</li>
-                                    <li>Help each other</li>
-                                    <li>Respect opposing opinions</li>
-                                    <li>Respect others</li>
-                                    <li>Engage in active listening</li>
-                                    <li>Demonstrate academic integrity</li>
-                                    <li>Make an effort in the class</li>
+                                <!--style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3"-->
+                                <ul >
+                                    <li>Be involved in groups</li>
+                                    <li>Be respectful</li>
                                 </ul>
                             </div>
                         </div>
@@ -563,18 +556,14 @@
                         <label for="faq80" class="lbl-toggle" tabindex="0" id="instructorResponsibilities">What are Neil's responsibilities as the instructor?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
-                                <p><mark>TBD: The class community will craft these.</mark></p>
                                 <p>
-                                   The Fall 2024 classes came up with the following Teacher Responsibilities.
+                                   The Spring 2025 class came up with the following Teacher Responsibilities.
                                 </p>
-                                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
-                                    <li>Grade fairly</li>
-                                    <li>List group members' duties</li>
-                                    <li>Gather peer feedback for group work</li>
-                                    <li>Have checkpoints during projects</li>
-                                    <li>Be consistent in grading</li>
-                                    <li>Take feedback</li>
-                                    <li>Teach effectively and engagingly</li>
+                                <!--style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3"-->
+                                <ul>
+                                    <li>Be the teacher you would want</li>
+                                    <li>No trick questions on assessments</li>
+                                    <li>Be respectful</li>
                                 </ul>
                             </div>
                         </div>
@@ -622,19 +611,15 @@
                                 <p>
                                     Participation can take many forms and I try to provide a variety of avenues for you to do so. Some forms are highly visible such as sharing your thinking in front of the entire class. Other forms are less visible such as completing Warmup questions and/or exit tickets. And then there are forms of participation that are in-between such as being a good and active group member when we break into small groups.
                                 </p>
-                                <p><mark>TBD: The class community will craft these.</mark></p>
                                 <p>
-                                    The Fall 2024 classes generated the following examples of what counts as participating in the course.
+                                    The Spring 2025 class generated the following examples of what counts as participating in the course.
                                 </p>
-                                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
-                                    <li>Talk in groups</li>
-                                    <li>Don't be distracting</li>
-                                    <li>Volunteer when able to</li>
-                                    <li>Answer questions</li>
+                                <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2;">
+                                    <li>Voice your ideas</li>
+                                    <li>Allow others to speak</li>
+                                    <li>Show up</li>
+                                    <li>Ask meaningful questions</li>
                                     <li>Actively play attention</li>
-                                    <li>Attend class</li>
-                                    <li>Provide material for discussion (i.e., come prepared to share your thoughts)</li>
-                                    <li>Be engaged</li>
                                 </ul>
                                 <p>
                                     In the past, there have been requests that participating in group/collaborative work should have more weight than answering questions in class. To me, all forms of participating are equally weighted.
@@ -716,7 +701,7 @@
                                 </p>
                                 <h3 id="late-passes">Late Passes</h3>
                                 <p>
-                                    If you have late passes available to you, you may use them give yourself an additional <mark>TBD</mark> hours (per late pass) to complete the assignment. You may use a maximum of <mark>TBD</mark> late passes on any assignment. Not all assignments will be eligible for using late passes (e.g., group assignments, quizzes, tests).
+                                    If you have late passes available to you, you may use them give yourself an additional 48 hours (per late pass) to complete the assignment. You may use a maximum of one (1) late passes on any assignment. Not all assignments will be eligible for using late passes (e.g., group assignments, quizzes, tests).
                                 </p>
                                 <p>
                                     You do not need to ask me to use a late pass. These are things you can automatically use in the homework system.
@@ -824,11 +809,11 @@
                                     </dd>
                                     <dt>Tests</dt>
                                     <dd>
-                                        <mark>TBD</mark> <br/> Past classes have voted to not have tests but to have additional small projects, papers, or other assignments insted. Others have voted to have 2 tests given during the semester. You will work alone to complete each test to show your understanding of the course material. The best possible preparation for the tests is regular attendance and completion of assigned homework. Making up a missed test will be set up on a case-by-case basis. Such requests should include legitimate reasons with sufficient/appropriate written documents.
+                                        The Spring 2025 class voted to not have any tests.
                                     </dd>
                                     <dt>Final Exam</dt>
                                     <dd>
-                                        <mark>TBD</mark> <br/>The Fall 2024 class opted to not have a final exam. In the past, when student have voted for a final exam, they opted for the following conditions: will be take home and students will be allowed to use a "cheat sheet", which they must upload afterwards. The final exam was available between 8am the Monday of Finals week but must be submitted by 5pm the Friday of Finals week. Once started, the student had 110 minutes to complete the exam.
+                                        The Spring 2025 class voted to not have a final exam.
                                     </dd>
                                     <dt>Course Group Project</dt>
                                     <dd>
@@ -946,10 +931,11 @@
                     </div>
                     <div class="wrap-collabsible">
                         <input id="faq64" class="toggle" type="checkbox">
-                        <label for="faq64" class="lbl-toggle" tabindex="0">UWhen are the tests-i.e., in class or in the evening?</label>
+                        <label for="faq64" class="lbl-toggle" tabindex="0">When are the tests-i.e., in class or in the evening?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
-                                <p><mark>TBD: The class community will have a say in this.</mark> The following information is kept for historical reasons, highlighting what past classes have opted for.</p>
+                                <p>The Spring 2025 class voted to not have any tests.</p>
+                                <p>The following information is kept for historical reasons, highlighting what past classes have chosen.</p>
                                 <ul>
                                     <li>The Spring and Fall 2024 classes voted to not have tests.</li>
                                     <li>The Fall 2023 class voted to not have tests.</li>
@@ -1411,7 +1397,7 @@
                                 </p>
                                 <p><mark>TBD; the class community will develop their recommendations.</mark></p>
                                 <table rules="all" border="1pt">
-                                    <caption>Fall 2024 Classes' Decisions for Consequences/Sanctions for Violating Academic Integrity</caption>
+                                    <caption>Spring 2025 Class Decisions for Consequences/Sanctions for Violating Academic Integrity</caption>
                                     <thead>
                                         <tr>
                                             <td></td>
@@ -1424,19 +1410,19 @@
                                         <tr>
                                             <th scope="row">Minor</th>
                                             <td>Redo the assignment</td>
-                                            <td>Redo the assignment with two levels off</td>
+                                            <td>Redo the assignment with one level off</td>
                                             <td>"Not Yet, Not Shown" (0) on the assignment</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">Moderate</th>
-                                            <td>Assignment grade lowered by two levels</td>
+                                            <td>Redo the assignment with two levels off</td>
                                             <td>"Not Yet, Not Shown" (0) on the assignment</td>
-                                            <td>"Not Yet, Not Shown" (0) on the assignment and a written apology</td>
+                                            <td>"Not Yet, Not Shown" (0) on the assignment</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">Major</th>
-                                            <td>"Not Yet, Not Shown" (0) on the assignment and a written apology</td>
-                                            <td>Drop 2 letter grades for Course Grade</td>
+                                            <td>"Not Yet, Not Shown" (0) on the assignment</td>
+                                            <td>Fail the course and recommend a grade of XF</td>
                                             <td>Fail the course and recommend a grade of XF</td>
                                         </tr>
                                     </tbody>
@@ -1663,7 +1649,7 @@
                     <div align="center">
                         <a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
                                 src="1_Images/psu_mark.jpg" class="noborder" style="width: 318px; height: 85px;" /></a>
-                        <br /> © 2024 Neil J. Hatfield
+                        <br /> © 2025 Neil J. Hatfield
                         <br />
                     </div>
                 </div>
