--- a/STAT184/PCIP_System.html
+++ b/STAT184/PCIP_System.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
     <title>The PCIP System</title>
-    <link media="screen,projection" type="text/css" href="1_Scripts/neil.css" rel="stylesheet" />
+    <link media="screen,projection" type="text/css" href="../1_Scripts/neil.css" rel="stylesheet" />
     <meta name="author" content="Neil Hatfield" />
     <meta name="keywords" content="Stat184, PCIP, Plan-Code-Improve-Polish" />
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
@@ -18,7 +18,7 @@
         <h1 style="text-align: center;">The Plan-Code-Improve-Polish (PCIP) System</h1>
         <br/>
         <div align="center">
-          <img class="noborder" alt="PCIP Logo" src="1_Images/pcip_logo.jpg"
+          <img class="noborder" alt="PCIP Logo" src="../1_Images/pcip_logo.jpg"
           style="height: 400px;" />
         </div>
       </div>
@@ -30,7 +30,7 @@
         </p>
         <div class="grid-container">
           <div class="grid-image">
-            <img class="noborder" src="1_Images/Plan.png" alt="Planning Logo" style="height: 300px;">
+            <img class="noborder" src="../1_Images/Plan.png" alt="Planning Logo" style="height: 300px;">
           </div>
           <div class="grid-text">
             <ul>
@@ -82,7 +82,7 @@
             </p>
           </div>
           <div class="grid-image">
-            <img class="noborder" src="1_Images/Code.png" alt="Coding Logo" style="height: 300px;">
+            <img class="noborder" src="../1_Images/Code.png" alt="Coding Logo" style="height: 300px;">
           </div>
         </div>
         <h3>Key Checks when Coding</h3>
@@ -134,7 +134,7 @@
         </p>
         <div class="grid-container">
           <div class="grid-image">
-            <img class="noborder" src="1_Images/Improve.png" alt="Improving Logo" style="height: 300px;">
+            <img class="noborder" src="../1_Images/Improve.png" alt="Improving Logo" style="height: 300px;">
           </div>
           <div class="grid-text">
             <p>
@@ -198,7 +198,7 @@
             </p>
           </div>
           <div class="grid-image">
-            <img class="noborder" src="1_Images/Polish.png" alt="Polishing Logo" style="height: 300px;">
+            <img class="noborder" src="../1_Images/Polish.png" alt="Polishing Logo" style="height: 300px;">
           </div>
         </div>
         <h3>Key Checks when Polishing</h3>
@@ -235,7 +235,7 @@
       <div id="footer">
         <div align="center">
             <a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
-                    src="1_Images/psu_mark.jpg" class="noborder" style="width: 318px; height: 85px;" /></a>
+                    src="../1_Images/psu_mark.jpg" class="noborder" style="width: 318px; height: 85px;" /></a>
             <br /> © 2025 Neil J. Hatfield
             <br /> Artwork by Aaron Garcia
             <br />
