--- a/STAT184/PCIP_System.html
+++ b/STAT184/PCIP_System.html
@@ -172,6 +172,7 @@
             <li>Are there any places where you can be more efficient?</li>
             <li>Keep track of your bugs and how you fixed them.</li>
             <li>Incorporate comments to help you make sense of your code in the future.</li>
+            <li>Do you have DRY code? That is, have you applied the principle of Do Not Repeat Yourself to your code?</li>
           </ul>
           <li><strong>In a Data Visualization Context</strong></li>
           <ul>
